# x-search-mcp

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: api-client.ts  index.ts  tools.ts
tests/: test_api_client.py  test_tools.py
x_search_mcp/: __main__.py  api_client.py  server.py
x_search_mcp/tools/: analysis.py  search.py
